# Tether-Chat

./: .clang-format  .gitignore  AnthropicInterlocutor.cpp  AnthropicInterlocutor.h  CMakeLists.txt  ChatManager.cpp  ChatManager.h  ChatMessage.h  ChatModel.cpp  ChatModel.h  DeepSeekInterlocutor.cpp  DeepSeekInterlocutor.h  DummyInterlocutor.cpp  DummyInterlocutor.h  GoogleAIInterlocutor.cpp  GoogleAIInterlocutor.h  Interlocutor.cpp  Interlocutor.h  InterlocutorConfig.cpp  InterlocutorConfig.h  InterlocutorReply.h  Main.qml  ManagedFile.cpp  ManagedFile.h  ModelInfo.h  ModelRegistry.cpp  ModelRegistry.h  OpenAIInterlocutor.cpp  OpenAIInterlocutor.h  README.md  SOFTWARE_DESIGN.md  TetherLogger.cpp  TetherLogger.h  main.cpp  settings.cpp  settings.h
